--- a/html_css_homework_2/index.html
+++ b/html_css_homework_2/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body class="">
-
+<body>
+<div class="wrapper">
 
 <header class="page-head">
     <h2 class="title-name"><a href="#">Ra<span class="title-second-color">mda.js</span></a></h2>
@@ -33,7 +33,7 @@
         </ul>
     </nav>
     <section class="content">
-        <div class="imageDiv"><img src="https://d2eip9sf3oo6c2.cloudfront.net/tags/images/000/000/943/full/ramda.png" alt="Ramda"></div>
+        <div class="page-image"><img src="https://d2eip9sf3oo6c2.cloudfront.net/tags/images/000/000/943/full/ramda.png" alt="Ramda"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, blanditiis dolores eos fugit repellat saepe. A alias consequatur, distinctio eaque eligendi eos incidunt, laudantium necessitatibus placeat quasi sint tempora temporibus..Lorem ipsum dolor sit amet, consectetur adipisicing elit. A at, blanditiis dolorem eligendi, est eum iste itaque laboriosam natus nesciunt numquam odit officiis perferendis, quia reprehenderit sint sunt veritatis voluptatem!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium aliquam architecto commodi, consequuntur dicta doloribus ea eius esse ex explicabo inventore, ipsa maxime omnis optio quaerat quam quos saepe ut.</p>
     </section>
@@ -50,5 +50,6 @@
     <span class="copyright">Lorem &copy; 2019</span>
 </footer>
 
+</div>
 </body>
 </html>
