--- a/html_ccs_homework_3/index.html
+++ b/html_ccs_homework_3/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
-    <title>Milan Holidays</title>
+    <title>Troyeschina Holidays</title>
 </head>
 <body>
 
@@ -164,7 +164,7 @@
 
 
         <div class="page-footer">
-            <p class="footer-copyright">&copy; 2019 Copyright</p>
+            <p class="footer-copyright">&copy; 2019 Copyright Troyeschina Holidays, Inc. All rights violated</p>
         </div>
 
     </div>
