Commited css_html_hw6_v1.0

--- a/html_css_homework_6/index.html
+++ b/html_css_homework_6/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HW6</title>
 </head>
 <body>
 
